--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^19.1.1",
     "react-redux": "8.1.2",
     "react-refresh": "^0.11.0",
+    "react-router-dom": "6.15.0",
     "redux": "4.2.1",
     "redux-devtools-extension": "2.13.9",
     "resolve": "^1.20.0",
